@@ -2,5 +2,6 @@ HAVE_LIBR?install
 HAVE_LIBR?dbi
 HAVE_LIBR?survey
 HAVE_LIBR?dplyr
+HAVE_LIBR?dbapply
 
 
