@@ -1,0 +1,37 @@
+stderr of test 'dbapply` in directory 'clients/R` itself:
+
+
+# 11:43:10 >  
+# 11:43:10 >  "mserver5" "--debug=10" "--set" "gdk_nr_threads=0" "--set" "mapi_open=true" "--set" "mapi_port=35780" "--set" "mapi_usock=/var/tmp/mtest-66645/.s.monetdb.35780" "--set" "monet_prompt=" "--forcemito" "--set" "mal_listing=2" "--dbpath=/Users/hannes/monetdb-install/var/MonetDB/mTests_clients_R" "--set" "mal_listing=0" "--set" "embedded_r=yes"
+# 11:43:10 >  
+
+# builtin opt 	gdk_dbpath = /Users/hannes/monetdb-install/var/monetdb5/dbfarm/demo
+# builtin opt 	gdk_debug = 0
+# builtin opt 	gdk_vmtrim = no
+# builtin opt 	monet_prompt = >
+# builtin opt 	monet_daemon = no
+# builtin opt 	mapi_port = 50000
+# builtin opt 	mapi_open = false
+# builtin opt 	mapi_autosense = false
+# builtin opt 	sql_optimizer = default_pipe
+# builtin opt 	sql_debug = 0
+# cmdline opt 	gdk_nr_threads = 0
+# cmdline opt 	mapi_open = true
+# cmdline opt 	mapi_port = 35780
+# cmdline opt 	mapi_usock = /var/tmp/mtest-66645/.s.monetdb.35780
+# cmdline opt 	monet_prompt = 
+# cmdline opt 	mal_listing = 2
+# cmdline opt 	gdk_dbpath = /Users/hannes/monetdb-install/var/MonetDB/mTests_clients_R
+# cmdline opt 	mal_listing = 0
+# cmdline opt 	embedded_r = yes
+# cmdline opt 	gdk_debug = 536870922
+
+# 11:43:14 >  
+# 11:43:14 >  "R" "--vanilla" "--slave" "--args" "35780"
+# 11:43:14 >  
+
+
+# 11:43:21 >  
+# 11:43:21 >  "Done."
+# 11:43:21 >  
+
