@@ -1,0 +1,46 @@
+stdout of test 'dbapply` in directory 'clients/R` itself:
+
+
+# 11:43:10 >  
+# 11:43:10 >  "mserver5" "--debug=10" "--set" "gdk_nr_threads=0" "--set" "mapi_open=true" "--set" "mapi_port=35780" "--set" "mapi_usock=/var/tmp/mtest-66645/.s.monetdb.35780" "--set" "monet_prompt=" "--forcemito" "--set" "mal_listing=2" "--dbpath=/Users/hannes/monetdb-install/var/MonetDB/mTests_clients_R" "--set" "mal_listing=0" "--set" "embedded_r=yes"
+# 11:43:10 >  
+
+# MonetDB 5 server v11.22.0
+# This is an unreleased version
+# Serving database 'mTests_clients_R', using 4 threads
+# Compiled for x86_64-apple-darwin14.3.0/64bit with 64bit OIDs and 128bit integers dynamically linked
+# Found 16.000 GiB available main-memory.
+# Copyright (c) 1993-July 2008 CWI.
+# Copyright (c) August 2008-2015 MonetDB B.V., all rights reserved
+# Visit http://www.monetdb.org/ for further information
+# Listening for connection requests on mapi:monetdb://dakar.da.cwi.nl.hhk.dk:35780/
+# Listening for UNIX domain connection requests on mapi:monetdb:///var/tmp/mtest-66645/.s.monetdb.35780
+# MonetDB/GIS module loaded
+# Start processing logs sql/sql_logs version 52200
+# Start reading the write-ahead log 'sql_logs/sql/log.5'
+# Finished reading the write-ahead log 'sql_logs/sql/log.5'
+# Finished processing logs sql/sql_logs
+# MonetDB/SQL module loaded
+# MonetDB/R   module loaded
+
+Ready.
+
+# 11:43:14 >  
+# 11:43:14 >  "R" "--vanilla" "--slave" "--args" "35780"
+# 11:43:14 >  
+
+[1] TRUE
+An object of class "MonetDBResult"
+Slot "env":
+<environment: 0x7fa0e4a984e8>
+
+[1] 42
+[1] TRUE
+[1] TRUE
+[1] TRUE
+[1] "SUCCESS"
+
+# 11:43:21 >  
+# 11:43:21 >  "Done."
+# 11:43:21 >  
+
