@@ -1,5 +1,6 @@
 0.9.9
 - dbWriteTable now quotes table/column names if necessary, and outputs warnings if it did
+- New dbApply function to automatically create embedded R functions in MonetDB
 
 0.9.8
 - Added support for esoteric data types such as MONTH_INTERVAL (Thanks, Roman)
